add java knowledge